# mlflow-eval-workshop

./: .gitignore  LICENSE  README.md  eval_gate.py  mlflow.db  pyproject.toml  requirements-workshop.txt
.github/workflows/: ci.yml  eval-gate.yml
notebooks/: 00_intro.py  00_setup.py  00_verify_environment.py  01_mlflow_evaluation_ecosystem.py  01_third_party_scorers.py  02_eval_infrastructure.py  02_production_infrastructure.py  03_comparison_and_regression.py  04_evaluation_gate.py  04_pipeline_and_deployment.py  _verify_environment.py  bonus_uv_dependencies.py
tests/: test_eval_gate.py
