[project]
name = "mlflow-eval-workshop"
version = "0.1.0"
description = "ODSC AI East 2026: Evaluating LLM Applications with MLflow"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Debu Sinha", email = "debusinha2009@gmail.com" }]
readme = "README.md"

dependencies = [
    "mlflow[genai]>=3.1",
    "arize-phoenix-evals>=0.22",
    "trulens>=1.4",
    "trulens-providers-litellm>=1.4",
    "guardrails-ai>=0.6",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "openai>=1.50",
    "nltk>=3.9",
]

[project.optional-dependencies]
databricks = ["databricks-agents>=0.14"]

[dependency-groups]
dev = ["ruff>=0.14", "pytest>=8.0"]
