[project]
name = "mlflow-eval-workshop"
version = "0.1.0"
description = "ODSC AI East 2026: Evaluating LLM Applications with MLflow"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Debu Sinha", email = "debusinha2009@gmail.com" }]
readme = "README.md"

# Core deps: enough to run all modules except Guardrails DetectPII.
# mlflow pinned to >=3.9 because Module 2 uses mlflow.genai.make_judge with
# feedback_value_type, and that signature landed in MLflow 3.9.
dependencies = [
    "mlflow[genai]>=3.9,<4.0",
    "arize-phoenix-evals>=0.22",
    "trulens>=1.4",
    "trulens-providers-litellm>=1.4",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "openai>=1.50",
    "nltk>=3.9",
]

[project.optional-dependencies]
guardrails = [
    "guardrails-ai>=0.6,<1.0",
]
databricks = ["databricks-agents>=0.14"]
local = ["jupytext>=1.16"]
all = [
    "mlflow-eval-workshop[guardrails,databricks,local]",
]

[dependency-groups]
dev = ["ruff>=0.14", "pytest>=8.0"]
